--- a/asteroidsgame.html
+++ b/asteroidsgame.html
@@ -4,6 +4,7 @@
   <head>
     <title>asteroids</title>
     <link rel = 'stylesheet' type = 'text/css' href = 'asteroids.css'>
+    </head>
   </head>
 
   <body>
