--- a/asteroidsgame.html
+++ b/asteroidsgame.html
@@ -11,6 +11,7 @@
     <div class = 'container'>
       <div class = 'game'>
         <canvas id = 'asteroidscanvas' width = '800' height = '600'></canvas>
+        <audio src='assets/thruster_sound.m4a' id='thruster'></audio>
       </div>
     <div>
     <script type='text/javascript' src='asteroids.js'></script>
